# text2cypher_llama_agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: llms.py  main.py  resource_manager.py  settings.py  utils.py
app/static/: global.css
app/templates/components/: docs.html  header.html  input.html
app/workflows/: frontend_events.py  iterative_planner.py  joke.py  naive_text2cypher.py  naive_text2cypher_retry.py  shared.py  text2cypher_retry_check.py  utils.py
app/workflows/iterative_planner_steps/: __init__.py  correct_cypher.py  final_answer.py  generate_cypher.py  guardrails.py  information_check.py  initial_plan.py  validate_cypher.py
app/workflows/naive_text2cypher_steps/: __init__.py  correct_cypher.py  generate_cypher.py  summarize_answer.py
benchmark/: benchmark.ipynb  benchmark_gridsearch.ipynb  benchmark_single.ipynb  test_data.csv
static/: global.css
templates/components/: docs.html  header.html  input.html  output.html
templates/layouts/: basic.html
templates/pages/: index.html
workflows/: bizdev.py  iterative_planner.py  naive_text2cypher.py  naive_text2cypher_retry.py  text2cypher_retry_check.py
workflows/shared/: fewshot_examples.parquet  local_fewshot_manager.py  neo4j_fewshot_manager.py  utils.py
workflows/steps/bizdev/: __init__.py  generate_cypher.py
workflows/steps/iterative_planner/: __init__.py  correct_cypher.py  final_answer.py  generate_cypher.py  information_check.py  initial_plan.py  validate_cypher.py
workflows/steps/naive_text2cypher/: __init__.py  correct_cypher.py  (+1 more)
(+10 files in other folders)
