[project]
name = "easwee-net"
version = "4.0.0"
description = "Easwee's digital playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.6",
    "llama-index-llms-openai>=0.3.12",
    "markdown2>=2.5.2",
    "openai>=1.58.1",
    "python-dotenv>=1.0.1",
]
